# HaoLine

./: .cursorrules  .gitignore  Architecture.md  BACKLOG.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile.test  PRD.md  PRDBacklogArchive.md  PRIVACY.md  README.md  demo_mnist_ir  demo_mnist_ir.dot  demo_mnist_ir.json  how cd8352astreamlit_app.py 2&1  Select-String -Pattern DEMOdemo_modelmnistefficientnetmobilenet -CaseSensitive$false -Context 5  Select-Object -First 60  pyproject.toml  streamlit_app.py  test_format_readers.py
.github/workflows/: ci.yml  deploy-hf-spaces.yml
demo_outputs/yolo_quantization/: data.yaml
demo_outputs/yolo_quantization/comparison/: comparison.csv  comparison.json  comparison.md
demo_outputs/yolo_quantization/eval_results/: eval_fp16.json  eval_fp32.json
demo_outputs/yolo_quantization/train/: args.yaml  results.csv
docs/: YOLO_QUANTIZATION_WORKFLOW.md
integration_output/: layers.csv  model_card.md  report.json
integration_output/bert/: report.json
integration_output/resnet18/: model_card.md  report.json
integration_output/resnet50_compare/: comparison.json  comparison.md
integration_output/yolo_v8l/: report.json
memory_bank/: CURSOR_AGENT_RULES.md  DECISIONS.md  GLOSSARY.md  INDEX.md  MASTER_MEMORY.md
scripts/: create_research_doc.py  create_research_zip.py  yolo_quantization_demo.py
src/haoline/: __init__.py  analyzer.py  cli.py  compare.py  compare_visualizations.py  edge_analysis.py  format_adapters.py  hardware.py  hierarchical_graph.py  html_export.py  layer_summary.py  llm_summarizer.py  op_icons.py  operational_profiling.py  patterns.py  pdf_generator.py  privacy.py  pydantic_models.py  quantization_advisor.py  quantization_linter.py  report.py  report_sections.py  risks.py  schema.py  streamlit_app.py  streamlit_tabs.py  universal_ir.py  visualizations.py  visualize_yolo.py  web.py
src/haoline/eval/: __init__.py  adapters.py  cli.py  comparison.py  deployment.py  schemas.py
src/haoline/examples/: basic_inspection.py  compare_models.py  hardware_estimation.py
src/haoline/formats/: __init__.py  coreml.py  gguf.py  openvino.py  safetensors.py  tensorrt.py  tflite.py  trt_comparison.py
src/haoline/tests/: conftest.py  test_analyzer.py  test_conversions.py  test_edge_analysis.py  test_eval.py  test_format_adapters.py  test_formats.py  test_hardware.py  test_hierarchical_graph.py  test_html_export.py  test_layer_summary.py  test_llm_patterns.py  test_llm_summarizer.py  test_patterns.py  test_pytorch.py  test_report.py  test_risks.py  test_schema.py  test_streamlit_tabs.py  test_tensorflow.py  test_visualizations.py
